# FOREX_ALGEBRAIC-DECODING-OF-TEMPORAL-SYMMETRIES

./: .gitignore  ANOMALY_LAPLACIAN_RL_SYSTEM.md  CONCRETE_EURUSD_EXAMPLE.md  CTRADER.MD  Cargo.toml  DEPLOYMENT.md  Dockerfile.embedded  ENHANCED_CLI_CONTROLLER_COMPLETE_SOLUTION.md  LAPLACIAN REINFORCEMENT LEARNING.MD  README.md  SYNTHETIC_FOREX_TRADING_SYSTEM.md  build_linux.sh  ctrader_demo_config.env  ctrader_live_config.env  render.yaml  start.sh  test_deployment.bat
deploy/: Dockerfile.build  app.py  requirements.txt  server.js
src/: lib.rs  main.rs
src/anomaly/: mod.rs
src/backtest/: mod.rs
src/core/: engine.rs  field_operations.rs  mod.rs  temporal_state.rs
src/correlation/: mod.rs
src/dashboard/: mod.rs
src/data/: mod.rs
src/embedded_db/: mod.rs
src/galois/: mod.rs
src/laplacian_rl/: mod.rs
src/multi_currency/: mod.rs
src/patterns/: mod.rs
src/symmetry/: mod.rs
src/synthetic/: mod.rs  trading_env.rs
src/visualization/: mod.rs
